# modorganizer-esptk

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Version.cmake  appveyor.yml
.github/workflows/: build.yml  linting.yml
cmake/: config.cmake.in
include/esptk/: espexceptions.h  espfile.h  esptypes.h  record.h  subrecord.h  tes3subrecord.h
src/: CMakeLists.txt  SConscript  espexceptions.h  espfile.cpp  espfile.h  esptk.pro  esptypes.h  record.cpp  record.h  subrecord.cpp  subrecord.h  tes3record.cpp  tes3record.h  tes3subrecord.cpp  tes3subrecord.h
