CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT(esptk)

SET(PROJ_AUTHOR Tannin)
SET(PROJ_ARCH x86)
if(CMAKE_SIZEOF_VOID_P EQUAL 8)
  SET(PROJ_ARCH x64)
endif()


SET(esptk_SRCS
	espfile.cpp
    record.cpp
    subrecord.cpp
  )

SET(esptk_HDRS
    espfile.h
    record.h
    subrecord.h
    esptypes.h
    espexceptions.h
  )

SET(Boost_USE_STATIC_LIBS        ON)
SET(Boost_USE_MULTITHREADED      ON)
SET(Boost_USE_STATIC_RUNTIME    OFF)
FIND_PACKAGE(Boost REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

ADD_LIBRARY(esptk STATIC ${esptk_HDRS} ${esptk_SRCS})

SET_TARGET_PROPERTIES(esptk PROPERTIES COMPILE_FLAGS /GL)
SET_TARGET_PROPERTIES(esptk PROPERTIES LINK_FLAGS_RELWITHDEBINFO "/LTCG /INCREMENTAL:NO /LARGEADDRESSAWARE /OPT:REF /OPT:ICF")
